apply plugin: 'com.android.application'
apply plugin: 'com.neenbedankt.android-apt'
apply plugin: 'me.tatarka.retrolambda'

android {
    compileSdkVersion 25
    buildToolsVersion "25.0.2"

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    defaultConfig {
        applicationId "com.zhuinden.navigatornestedstack"
        minSdkVersion 16
        targetSdkVersion 25
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    lintOptions { // CI
        abortOnError false
    }
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile project(':navigator')

    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    testCompile 'junit:junit:4.12'

    compile 'com.jakewharton:butterknife:8.5.1'
    apt 'com.jakewharton:butterknife-compiler:8.5.1'

    compile 'com.github.Zhuinden:service-tree:1.2.2'

    apt 'frankiesardo:auto-parcel:1.0.3'

    apt 'com.google.dagger:dagger-compiler:2.9'
    compile 'com.google.dagger:dagger:2.9'
    provided 'org.glassfish:javax.annotation:10.0-b28'
    compile 'com.android.support:appcompat-v7:25.1.0'
    compile "com.android.support:recyclerview-v7:25.1.0"
    compile "com.android.support:design:25.1.0"

    compile "com.andkulikov:transitionseverywhere:1.7.0"

    compile 'it.sephiroth.android.library.bottomnavigation:bottom-navigation:2.0.1-rc1'
}
